unpackaged/main/default/objects/maps__LiveAsset__c/fields/maps__Active__c.field-meta.xml
<CustomField>
    <fullName>maps__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>L&#39;actif est-il un élément d&#39;inventaire/de flotte actif ?</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>