unpackaged/main/default/objects/maps__LiveAsset__c/fields/maps__AssetId__c.field-meta.xml
<CustomField>
    <fullName>maps__AssetId__c</fullName>
    <description>Proprietary Id for identifying assets within the company</description>
    <inlineHelpText>ID de propriétaire pour l&#39;identification des actifs au sein de l&#39;entreprise</inlineHelpText>
    <label>Asset Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>