unpackaged/main/default/objects/maps__LiveAsset__c/fields/maps__Make__c.field-meta.xml
<CustomField>
    <fullName>maps__Make__c</fullName>
    <description>Make of Vehicle or Non-Vehicle</description>
    <inlineHelpText>Marque du véhicule ou non-véhicule</inlineHelpText>
    <label>Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>