unpackaged/main/default/objects/maps__LiveAsset__c/fields/maps__Model__c.field-meta.xml
<CustomField>
    <fullName>maps__Model__c</fullName>
    <inlineHelpText>Modèle du véhicule ou non-véhicule</inlineHelpText>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>