unpackaged/main/default/objects/maps__LiveAsset__c/fields/maps__OdometerMiles__c.field-meta.xml
<CustomField>
    <fullName>maps__OdometerMiles__c</fullName>
    <description>Last available odometer reading, in miles</description>
    <formula>ROUND(maps__OdometerKm__c * 0.62137, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Dernière lecture disponible de l&#39;odomètre, en miles</inlineHelpText>
    <label>Odometer (mi)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>