unpackaged/main/default/objects/maps__LiveAsset__c/fields/maps__SerialNumber__c.field-meta.xml
<CustomField>
    <fullName>maps__SerialNumber__c</fullName>
    <description>A unique identifier for non-motorized and off-road assets</description>
    <inlineHelpText>Un identificateur unique pour les actifs non motorisés et non routiers</inlineHelpText>
    <label>Serial Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>