unpackaged/main/default/objects/maps__LiveAsset__c/fields/maps__VIN__c.field-meta.xml
<CustomField>
    <fullName>maps__VIN__c</fullName>
    <description>The Vehicle Identification Number of vehicle-type assets</description>
    <inlineHelpText>Numéro d&#39;identification de véhicule des actifs de type roulant</inlineHelpText>
    <label>VIN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>