unpackaged/main/default/objects/maps__LiveAsset__c/fields/maps__Year__c.field-meta.xml
<CustomField>
    <fullName>maps__Year__c</fullName>
    <inlineHelpText>Année de la marque / du modèle de l&#39;actif.</inlineHelpText>
    <label>Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>